<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movies">

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.marbax.moviefinder.ui.movies.MovieListFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/movie_list_fragment" >
        <action
            android:id="@+id/action_nav_movies_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_nav_movies_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.marbax.moviefinder.ui.favorites.FavoriteListFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/favorites_list_fragment" />

    <fragment
        android:id="@+id/nav_series"
        android:name="com.marbax.moviefinder.ui.series.SeriesListFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/series_list_fragment" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.marbax.moviefinder.ui.movies.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.marbax.moviefinder.ui.movies.details.MovieDetailsFragment"
        android:label="@string/details" >
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>
</navigation>